# rachamais

./: .env  .gitignore  CLEANUP_IMAGES.md  DEPLOY.md  Dockerfile  Procfile  README-ICONS.md  README.md  SUBMISSION_APPLE_RESUBMIT.md  app.json  eas.json  package-lock.json  package.json  server.ts  tailwind.config.js  vercel.json
api/: README.md  package-lock.json  package.json  pylock.toml  pyproject.toml  schema.sql  wrangler.jsonc
api/migrate/: export_postgres.py
api/src/: balances.py  db.py  deps.py  ids.py  invite_page.py  money.py  push.py  routes_auth.py  routes_expenses.py  routes_groups.py  routes_misc.py  routes_settlements.py  routes_users.py  schemas.py  security.py  serialize.py  worker.py
app/: _layout.tsx  about.tsx  index.tsx  modal.tsx  privacy.tsx
app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  onboarding.tsx  register.tsx
app/(tabs)/: _layout.tsx  activity.tsx  index.tsx  profile.tsx
app/api/: activities+api.ts
app/group/: _layout.tsx  create.tsx
app/invite/: [code].tsx
components/: AppleLoginButton.tsx  GoogleLoginButton.tsx  ProtectedRoute.tsx  parallax-scroll-view.tsx
components/activity/: ActivitySkeleton.tsx
components/balances/: BalancesSkeleton.tsx  DebtCard.tsx
constants/: colors.ts  mockData.ts  spacing.ts  styles.ts  typography.ts
contexts/: AuthContext.tsx  ToastContext.tsx
ios/: Podfile
legacy-bcrypt/: package-lock.json  package.json  wrangler.jsonc
lib/: api.ts  auth.ts  notifications.ts  utils.ts  validations.ts
prisma/: schema.prisma
scripts/: generate-icons.js
types/: index.ts
(+42 files in other folders)
